[package]
name = "post_maker"
version = "0.6.3"
edition = "2021"
description = "Post Maker helps you to make post for instagram and other social media apps easily and in massive amount. "
authors = ["PiyushXCoder <https://piyushxcoder.in>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/post_maker"
keywords = ["posts", "instagram", "facebook", "twitter"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "3.0", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
fltk = "1.2"
fltk-theme = "0.4"
image = "0.24.1"
imageproc = "0.23"
webp = "0.2"
rusttype = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
dirs = "4.0"
infer = "0.7.0"
textwrap = "0.14"
webbrowser = "0.5"
mozjpeg = "0.9.2"
bichannel = "0.0.4"
